@@ -1,10 +1,15 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
+	* adding SardanaNexusWriter
+	* tagged as 1.X.X
+
+2013-03-11 Jan Kotanski <jankotan@gmail.com>
 	* adding  support for separate group names in link targets
 	* making Elink.typesToNames private
 	* removing a name parameter from class inherited from Elements
 	* switches to pni.io library
 	* extending shapes up to a rank value
 	* adding tests
+	* improving FieldArray class
 	* tagged as 1.1.0
 
 
